# biot_savart_render

./: .gitignore  CMakeLists.txt  README.md  cmake_test.h
src/: Shaderloader.h  biot_savart_law.cpp  cmake_test.cpp  cmake_test.h  frag_shader.frag  line_integral.comp  vert_shader.vert
